Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-10531

TmpFileMgrTest.TestCompressBufferManagementEncryptedRemoteUpload failed in exhaustive release build

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • Impala 4.0.0
    • Impala 4.0.0
    • Backend
    • ghx-label-9

    Description

      The backend test failed in exhaustive release build:

      /data/jenkins/workspace/impala-cdpd-master-staging-exhaustive-release/repos/Impala/be/src/runtime/tmp-file-mgr-test.cc:1060: Failure
      Expected: (compressed_handle->file_) != (uncompressed_handle->file_), actual: 0xb033e00 vs 0xb033e00
      /data/jenkins/workspace/impala-cdpd-master-staging-exhaustive-release/repos/Impala/be/src/runtime/tmp-file-mgr-test.cc:1069: Failure
      Value of: io::DiskFileStatus::PERSISTED
      Actual: 4-byte object <01-00 00-00>
      Expected: tmp_file->DiskFile()->GetFileStatus()
      Which is: 4-byte object <00-00 00-00>
      /data/jenkins/workspace/impala-cdpd-master-staging-exhaustive-release/repos/Impala/be/src/runtime/tmp-file-mgr-test.cc:1069: Failure
      Value of: io::DiskFileStatus::PERSISTED
      Actual: 4-byte object <01-00 00-00>
      Expected: tmp_file->DiskFile()->GetFileStatus()
      Which is: 4-byte object <00-00 00-00>

       

       

      Attachments

        Issue Links

          Activity

            People

              baggio000 Yida Wu
              wzhou Wenzhe Zhou
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: